--- a/local.properties
+++ b/local.properties
@@ -4,6 +4,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Sep 12 22:41:22 CEST 2018
+#Sat Mar 09 17:27:36 CET 2019
 ndk.dir=C\:\\Users\\Pedro\\AppData\\Local\\Android\\Sdk\\ndk-bundle
 sdk.dir=C\:\\Users\\Pedro\\AppData\\Local\\Android\\Sdk
