--- a/local.properties
+++ b/local.properties
@@ -4,6 +4,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat Mar 09 17:27:36 CET 2019
-ndk.dir=C\:\\Users\\Pedro\\AppData\\Local\\Android\\Sdk\\ndk-bundle
-sdk.dir=C\:\\Users\\Pedro\\AppData\\Local\\Android\\Sdk
+#Sun Mar 10 00:32:38 CET 2019
+ndk.dir=/home/pedro/Android/Sdk/ndk-bundle
+sdk.dir=/home/pedro/Android/Sdk
